# go-questdb-client

./: .gitignore  .gitmodules  CLAUDE.md  README.md  address.go  alias.go  buffer.go  buffer_test.go  conf.go  conf_audit_test.go  conf_errors.go  conf_parse.go  conf_test.go  connect_timeout_test.go  const.go  decimal.go  errors.go  examples.manifest.yaml  export_test.go  go.mod  go.sum  http.go  http_errors.go  http_integration_test.go  http_sender.go  http_sender_test.go  http_test.go  integration_test.go  interop_test.go  ndarray.go  ndarray_test.go  pool.go  questdb.go  questdb_config_test.go  questdb_integration_test.go  questdb_restart_test.go  questdb_test.go  qwp_bench_test.go  qwp_bind_values.go  qwp_bind_values_test.go  (+138 more)
.ralph/: fix_plan.md
ci/: dispatch-enterprise-e2e.yml
design/: questdb-facade.md  qwp-cursor-durability.md  qwp-delta-symbol-dict.md  qwp-nack-policy-v2.md
examples/: auth_and_tls.go  basic.go
pool/: example_http_test.go  sender_pool.go  sender_pool_test.go
system_test/enterprise_e2e/: conftest.py  go_egress_sidecar.py  go_sidecar.py  pyproject.toml
system_test/enterprise_e2e/egress_sidecar/: go.mod  go.sum  main.go
system_test/enterprise_e2e/sidecar/: go.mod  go.sum  main.go
system_test/enterprise_e2e/tests/: test_demotion_mid_stream.py  test_durable_ack_failover.py  test_failover_fuzz.py  test_failover_graceful.py  test_go_client.py  test_sf_recovery.py  test_switch.py  test_switch_fuzz.py  test_switch_roundtrip_crash_repro.py  test_target_filter.py  test_txn_kill9_atomicity.py  test_zone_failover.py
test/: haproxy.cfg  (+2 more)
(+55 files in other folders)
